--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 dependencies {
     implementation 'org.apache.poi:poi-ooxml:4.1.2'
     implementation 'org.apache.poi:poi:4.1.2'
-    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 }
 
 test {
