--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,14 @@ java {
     sourceCompatibility = '17'
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication){
+            artifact jar
+        }
+    }
+}
+
 dependencies {
     implementation 'org.apache.poi:poi-ooxml:4.1.2'
     implementation 'org.apache.poi:poi:4.1.2'
