[release1] adding poi version

--- a/build.gradle
+++ b/build.gradle
@@ -24,5 +24,6 @@ publishing {
 
 dependencies {
     implementation 'org.apache.poi:poi-ooxml:5.4.0'
+    implementation 'org.apache.poi:poi:5.4.0'
     implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 }
